--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: [DRAFT] Global Advanced Analytics | Data Science Team Best Practices
+description: A test site for sharing GAA best practices via GitHub Pages, Just the Docs template, & Google Domains.
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://Jenna-Williams.github.io/GAA-Best-Practices
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+#aux_links:
+#  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  
+
